--- a/xgd.html
+++ b/xgd.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="row">
                 <div class="offset">
-                    <form class="form-container">
+                    <form class="login_box">
                         <div class="title">
                             登陆
                         </div>
@@ -27,7 +27,7 @@
                             <label for="exampleinputpassword"> 密码 </label>
                             <input type="password" class="form-control-password" id="password" />
                         </div>
-                        <div class="form-group form-check">
+                        <div class="form-check">
                             <input type="checkbox" class="from-control-check" id="check" />
                             <label for="checkinfo">记住我</label>
                         </div>
